certctl/service.yml
apiVersion: v1
kind: Service
metadata:
  name: certctl-server
  namespace: certctl
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: certctl
    app.kubernetes.io/instance: certctl
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: certctl
    app.kubernetes.io/name: certctl
